--- a/contactus.html
+++ b/contactus.html
@@ -2,6 +2,10 @@
 <html>
 <title>Contact Us</title>
 
+<head>
+  <link rel="stylesheet"  href="./style.css" />
+</head>
+
 <body>
 
   
@@ -35,9 +39,12 @@
 
 
   <!--is main and it will include all our contentfor landing page for our site-->
-  <main style="height: 100vh; background-color:lightblue;">
-
+  <main >
+<nav>
+  <div class="maincont">
     <h1 align="center">Contact Us / Address Information</h1>
+    <br>
+    <br>
 
 <form>
 
@@ -45,36 +52,45 @@ Your Name: <input type="text"><br>
 <br>
 Your Email: <input type="email"><br>
 <br>
-Subject Det:    <input type="text" name="subject"><br>
-<br>
-Comments: <br><textarea cols="15" rows="15"></textarea><br>
+Message: <br><textarea cols="15" rows="15"></textarea><br>
 <input type="submit"> <input type="reset">
 
 </form>
 
-<p>My address and contact details:</p>
 
-<p><b>593 Ehlanzeni Section<br>
-Tembisa<br>
-Gauteng<br>
-<br>
-<br>
-068 020 7723
-</b>
-
-</p>
-
-<p>Email <a href="mailto:mokibelomante@gmail.com">mokibelomante@gmail.com</a></p>
-
-
-
-
+</div>
+</nav>
   </main>
 
     <!--is footer and it will include all quick links for landing page for our site-->
+
+<nav>
+  <div class="foot">
+
+    <a href="index.html">
+      <img src="images/design.jpg"  alt="" width="100px" height="100px" />
+     </a><br>
+
+
+      <b>My address and contact details:</b> <br>
+      593 Ehlanzeni Section
+    <br> Tembisa <br>
+    Gauteng 
+     <br>
+     1632 
+     <br>
+  
+   Email <a href="mailto:mokibelomante@gmail.com">mokibelomante@gmail.com</a>
+  </div>
+</nav>
 <footer>
-  <hr>
+
+  <nav> 
+     <hr>
   <p align="center">First HTML Assessment</p>
+  </nav>
+
+ 
 </footer>
 
 </body>
